force-app/main/default/objects/Apttus_Config2__FieldExpression__c/Apttus_Config2__FieldExpression__c.object-meta.xml
<CustomObject>
    <description>Object model for field updates and rollups</description>
    <label>Field Expression</label>
    <nameField>
        <label>Field Expression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Expressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>