force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__ConditionExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionExpression__c</fullName>
    <description>Expression used to determine qualifying line items for rollup.</description>
    <inlineHelpText>Expression used to determine qualifying line items for rollup.</inlineHelpText>
    <label>Match Expression</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>