force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__ConditionScope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionScope__c</fullName>
    <description>Scope which determines when the rollup will be attached to the configuration.</description>
    <inlineHelpText>Scope which determines when the rollup will be attached to the configuration.</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
            <value>
                <fullName>Header Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>