force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__EvaluationContext__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EvaluationContext__c</fullName>
    <description>Gives expression evaluation context</description>
    <inlineHelpText>Gives expression evaluation context</inlineHelpText>
    <label>Evaluation Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constraint Rule Action</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Default Quantity</fullName>
            </value>
            <value>
                <fullName>Rollup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>