force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__Expression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Expression__c</fullName>
    <description>Represents the field expression for field updates and rollups</description>
    <inlineHelpText>Represents the field expression for field updates and rollups</inlineHelpText>
    <label>Value Expression</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>