force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__ExpressionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpressionType__c</fullName>
    <description>Expression type</description>
    <inlineHelpText>Expression type</inlineHelpText>
    <label>Expression Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Rollup</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>