force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__GroupByField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupByField__c</fullName>
    <description>Represents rollup field expression aggregation field name</description>
    <inlineHelpText>Represents rollup field expression aggregation field name</inlineHelpText>
    <label>Group By Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>