force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__IsModifiable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsModifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represent whether the field expression can be overridden.</description>
    <inlineHelpText>Represent whether the field expression can be overridden.</inlineHelpText>
    <label>Is Modifiable</label>
    <type>Checkbox</type>
</CustomField>