force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__Operation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Operation__c</fullName>
    <description>Rollup operation applied to the value expression of the line items returned by the match expression.</description>
    <inlineHelpText>Rollup operation applied to the value expression of the line items returned by the match expression.</inlineHelpText>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>