force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__ParentField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentField__c</fullName>
    <description>Field to associate line item rollup record to scope.</description>
    <inlineHelpText>Field to associate line item rollup record to scope.</inlineHelpText>
    <label>Parent Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>