force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Field Expressions</relationshipLabel>
    <relationshipName>FieldExpressions</relationshipName>
    <type>Lookup</type>
</CustomField>