force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceObject__c</fullName>
    <description>Represents the source object for expression.</description>
    <inlineHelpText>Represents the source object for expression.</inlineHelpText>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>