force-app/main/default/objects/Apttus_Config2__FieldExpression__c/fields/Apttus_Config2__UpdateObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UpdateObject__c</fullName>
    <description>Represents update field name containing object which gets value at runtime from field update or rollup expressions</description>
    <inlineHelpText>Represents update field name containing object which gets value at runtime from field update or rollup expressions</inlineHelpText>
    <label>Update Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>