force-app/main/default/objects/Apttus_Config2__FieldExpression__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Apttus_Config2__ExpressionType__c</columns>
    <columns>Apttus_Config2__EvaluationContext__c</columns>
    <columns>Apttus_Config2__UpdateField__c</columns>
    <columns>Apttus_Config2__UpdateObject__c</columns>
    <columns>Apttus_Config2__GroupByField__c</columns>
    <columns>Apttus_Config2__Expression__c</columns>
    <columns>Apttus_Config2__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>